FIX homepage to remove horizontal scrolling

--- a/frontend/react-frontend/src/index.css
+++ b/frontend/react-frontend/src/index.css
@@ -1016,3 +1016,8 @@ background-color:rgb(0, 102, 255) ;
 background-color:#046edf ;
 color: white;
 }
+
+html, body {
+  overflow-x: hidden;
+  max-width: 100%;
+}
